tests/NormalTests/paczka1/small_fuzzy/15766197.err
Error in line 1: A449 A39 8,1
Error in line 3: c9H2NI A449 73,3
Error in line 4: A449 S932 9,0
